// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`issuesToFindings > emits findings at nested paths 1`] = `
[
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`compatibility.requires[1]\` has the wrong type. Detail: Expected string. Edit \`skill.json\` and replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
]
`;

exports[`issuesToFindings > emits one finding per invalid top-level field 1`] = `
[
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`name\` has the wrong type. Detail: Expected string. Edit \`skill.json\` and replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`version\` has the wrong type. Detail: Expected string. Edit \`skill.json\` and replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`owner\` has the wrong type. Detail: Expected string. Edit \`skill.json\` and replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`description\` has the wrong type. Detail: Expected string. Edit \`skill.json\` and replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
]
`;

exports[`issuesToFindings > emits one finding per missing top-level key 1`] = `
[
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest is missing required field \`version\`. Edit \`skill.json\` and add \`version\`.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest is missing required field \`owner\`. Edit \`skill.json\` and add \`owner\`.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest is missing required field \`description\`. Edit \`skill.json\` and add \`description\`.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
]
`;
